public/css/dead-simple-carousel-public.css
/**
 * All of the CSS for your public-facing functionality should be
 * included in this file.
 */

.dscw {
	width: 100%;
}

.dscw__slides {
	height: 300px;
	width: 100%;
	overflow: hidden;
	display: block;
	opacity: 0;

	-webkit-transition: transform .3s ease-in-out;
	-moz-transition: transform .3s ease-in-out;
	-ms-transition: transform .3s ease-in-out;
	-o-transition: transform .3s ease-in-out;
	transition: transform .3s ease-in-out;
}

.dscw__slides__image,
.dscw__slides__image img {
	max-height: 300px;
	float: left;
	width: 100%;
}

